# anonit

./: Cargo.toml  README.md  cspell.json  dist-workspace.toml
src/: config.rs  ctx.rs  faker.rs  json.rs  lib.rs  main.rs  prompt_utils.rs
src/data/: json.rs  key.rs  mod.rs  value.rs
src/fake/: email.rs  ignore.rs  lorem.rs  mod.rs  name.rs  number.rs  number_string.rs  uuid.rs  wordlist.rs
tests/: test_inputs.rs
tests/common/: key.rs
tests/samples/: input_internal_mappings.json  output_internal_mappings.json
