[package]
name = "anonit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
eyre = "0.6.12"
fake = { version = "5.1.0", features = ["uuid", "url", "chrono"] }
inquire = "0.9.4"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["rc"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
uuid = "1.23.1"
