[package]
name = "anonit"
version = "0.0.1"
edition = "2024"

[dependencies]
# CLI handling
clap = { version = "4.6.1", features = ["derive"] }

# Prompting
inquire = "0.9.4"

# Fake data generation
fake = { version = "5.1.0", features = ["uuid", "url", "chrono"] }

# Iterator utilities
itertools = "0.14.0"

# Serialization and deserialization
serde = { version = "1.0.228", features = ["rc"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }

# Serializable and deserializable traits
typetag = "0.2.21"

# Enum string helpers
strum = { version = "0.28.0", features = ["derive"] }

# Errors
thiserror = "2.0.18"
eyre = "0.6.12"

# UUIDs
uuid = "1.23.1"
